--- a/styles/style.css
+++ b/styles/style.css
@@ -10,9 +10,15 @@ body {
   background-color: #fd6e0a;
   border-radius: 5px;
   border: none;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 15px 35px;
 }
 nav {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .nav-title {
   color: #181818;
@@ -22,6 +28,7 @@ nav {
 
 nav > ul {
   display: flex;
+  align-items: center;
 }
 nav li {
   list-style: none;
