--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 200px;
 }
 .nav-title {
   color: #181818;
@@ -39,9 +40,15 @@ nav a {
   text-decoration: none;
   color: #474747;
 }
+.header {
+  background: #fff8f3;
+}
+.banner {
+  padding: 30px 30px 30px 150px;
+  display: flex;
+  align-items: center;
+}
 
-/* nav button {
-  color: #ffffff;
-  width: 150px;
-  height: 64px;
-} */
+.banner .profile-pic {
+  width: 500px;
+}
