--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/*  */
+/*Header  */
 body {
   font-family: "Open Sans", sans-serif;
 }
@@ -42,13 +42,90 @@ nav a {
 }
 .header {
   background: #fff8f3;
+  background-image: url("../images//header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 .banner {
-  padding: 30px 30px 30px 150px;
+  padding: 30px 30px 0px 150px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .banner .profile-pic {
   width: 500px;
+}
+.banner-greeting {
+  color: #474747;
+  font-size: 45px;
+  font-weight: 600;
+  margin-bottom: 0px;
+}
+.banner-title {
+  color: #181818;
+  font-size: 85px;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+.banner-description {
+  color: #757575;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  width: 585px;
+  margin-top: 20px;
+}
+#contact-btn {
+  border: 1px solid #fd6e0a;
+  width: 150px;
+  height: 50px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: #fff8f3;
+  border-radius: 5px;
+  color: #fd6e0a;
+
+  padding: 12px 20px 39px 22px;
+}
+
+.button-content {
+  display: flex;
+  align-items: center;
+}
+
+.svg {
+  width: 18px;
+  height: 18px;
+  margin-right: 6px;
+}
+
+/* Main Style */
+/* Section Style */
+
+.about {
+  border-radius: 10px;
+  background: #fff8f3;
+  width: 1140px;
+  height: 550px;
+  margin: 130px 230px 0; /* top margin: 130px, left and right margins: 230px */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+/* Rest of the CSS remains the same */
+.section-title {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.section-paragraph {
+  font-size: 16px;
+  text-align: center;
 }
