--- a/styles/style.css
+++ b/styles/style.css
@@ -103,29 +103,45 @@ nav a {
 }
 
 /* Main Style */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
 /* Section Style */
-
 .about {
   border-radius: 10px;
   background: #fff8f3;
-  width: 1140px;
-  height: 550px;
-  margin: 130px 230px 0; /* top margin: 130px, left and right margins: 230px */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-  box-sizing: border-box;
+  padding: 130px;
+  margin: 130px 0;
 }
-
-/* Rest of the CSS remains the same */
 .section-title {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.section-paragraph {
-  font-size: 16px;
+  color: #181818;
   text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-paragraph {
+  color: #474747;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.about-container {
+  display: flex;
+  justify-content: space-around;
+}
+.about-info {
+  text-align: center;
+}
+.title-info {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.paragraph-info {
+  color: #474747;
+  font-weight: 400;
+  line-height: 30px;
+  font-size: 20px;
 }
